layout for contact form

--- a/themes/centraldedados/templates/contact.html
+++ b/themes/centraldedados/templates/contact.html
@@ -10,7 +10,7 @@
         <form action="http://formspree.io/{{ contact_email }}" method="post">
           <label for="message">
             Your message
-            <textarea name="message" id="message" placeholder="Message..." required></textarea>
+            <textarea name="message" id="message" placeholder="Message..."></textarea>
           </label>
           <label for="sender">
             Your e-mail
