--- a/themes/centraldedados/static/css/main.css
+++ b/themes/centraldedados/static/css/main.css
@@ -118,10 +118,9 @@ button {
   background: transparent;
   padding: 0;
   border: 0;
-  border-radius: 3px;
-  line-height: 1; }
-  [data-whatinput='mouse'] button {
-    outline: 0; }
+  border-radius: 4px;
+  line-height: 1;
+  outline: 0; }
 
 html {
   box-sizing: border-box;
@@ -191,97 +190,120 @@ textarea {
 /* Typography
 */
 
+/* Typography
+*/
+
 @font-face {
-      font-family: 'Comme Regular';
-      src: local('Comme Regular'), url('/fonts/CommeSans/Comme-Regular.ttf') format('truetype');
+    font-family: 'Comme';
+    font-weight: 400;
+    font-style: normal;
+    src: local('Comme'), url('/fonts/CommeSans/Comme-Regular.ttf') format('truetype');
 }
 
 @font-face {
-      font-family: 'Comme Thin';
-      src: local('Comme Thin'), url('/fonts/CommeSans/Comme-Thin.ttf') format('truetype');
+    font-family: 'Comme';
+    font-weight: 300;
+    font-style: normal;
+    src: local('Comme Thin'), url('/fonts/CommeSans/Comme-Thin.ttf') format('truetype');
+}
+
+
+@font-face {
+    font-family: 'Comme';
+    font-weight: 700;
+    font-style: normal;
+    src: local('Comme Bold'), url('/fonts/CommeSans/Comme-Bold.ttf') format('truetype');
 }
 
 @font-face {
-      font-family: 'Comme Bold';
-      src: local('Comme Bold'), url('/fonts/CommeSans/Comme-Bold.ttf') format('truetype');
+    font-family: 'Comme';
+    font-weight: 500;
+    font-style: normal;
+    src: local('Comme Medium'), url('/fonts/CommeSans/Comme-Medium.ttf') format('truetype');
 }
 
 @font-face {
-      font-family: 'Comme Medium';
-      src: local('Comme Medium'), url('/fonts/CommeSans/Comme-Medium.ttf') format('truetype');
-}
-
-@font-face {
-      font-family: 'Comme Mono';
-      src: local('Comme Mono'), url('/fonts/CommeSans/CommeMono-Regular.ttf') format('truetype');
+    font-family: 'Comme Mono';
+    font-weight: 400;
+    font-style: normal;
+    src: local('Comme Mono'), url('/fonts/CommeSans/CommeMono-Regular.ttf') format('truetype');
 }
 
 body {
-        font-family: 'Comme Regular', DejaVu Sans, Arial, sans-serif;
-        line-height: 1.4;
+    font-family: 'Comme', DejaVu Sans, Arial, sans-serif;
+    font-weight: 400;
+    line-height: 1.4;
 }
 
-h1 {  
-  font-size: 2.25rem;  
-  font-family: 'Comme Thin'; 
-  margin-bottom: .5rem;  
+h1 {
+    font-size: 2.25rem;    
+    font-family: 'Comme';
+    font-weight: 300; 
+    margin-bottom: 0.5rem;
 }
 
 h2 {  
-  font-size: 1.85rem;     
-  font-family: 'Comme Medium';  
-  color: #888;
-  margin-top: 10px;
-  margin-bottom: 6px;
+    font-size: 1.85rem;      
+    font-family: 'Comme';
+    font-weight: 300;  
+    color: #888;
+    margin-top: 0.625rem;
+    margin-bottom: 0.375rem;
 }
 
 h3 {  
-  font-size: 1.625rem; 
-  font-family: 'Comme Medium';  
-  color: #888;
-  margin-top: 10px;
-  margin-bottom: 6px;
+    font-size: 1.625rem;
+    font-family: 'Comme';
+    font-weight: 500;    
+    color: #888;
+    margin-top: 0.625rem;
+    margin-bottom: 0.1rem;
 }
 
 h4 {  
-  font-size: 1.375rem; 
-  font-family: 'Comme Medium';  
-  color: #888;
-  margin-top: 10px;
-  margin-bottom: 6px;
+    font-size: 1.375rem; 
+    font-family: 'Comme';
+    font-weight: 500;    
+    color: #888;
+    margin-top: 0.625rem;
+    margin-bottom: 0.375rem;
 }
 
 h5 {  
-  color: #aaa;
-  margin-top: 6px;
-  font-size: 0.8rem;  
-  font-family: 'Comme Bold';	
-  text-transform: uppercase;
+    font-size: 0.8rem;    
+    font-family: 'Comme';
+    font-weight: 700;	
+    color: #aaa;
+    text-transform: uppercase;
+    margin-top: 0.375rem;
 }
 
-h6 {  
-  font-size: 0.7rem; 
-  font-family: 'Comme Medium';
-  text-transform: uppercase;
+h6 {
+    font-size: 0.7rem; 
+    font-family: 'Comme';
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 strong,
 .footer li a {	
-  font-family: 'Comme Bold';
+    font-family: 'Comme';
+    font-weight: 700;
 }
 
 .header .description {	
-  font-family: 'Comme Medium';	
+    font-family: 'Comme';
+    font-weight: 500;
 }
 
 .datafiles > .box span {
-  font-family: 'Comme Mono';	
+    font-family: 'Comme Mono';	
 }
 
 .nav,
 .footer,
 small {
-  font-size: 0.75rem;
+    font-size: 0.75rem;
 }
 
 
@@ -289,15 +311,21 @@ small {
 */
 
 body {
-  background: #d8d6c9;
-  color: #2c373a;
+    background: #d8d6c9;
+    color: #2c373a;
 }
 
 a {
-  color: #de1b1b;
-  text-decoration: none;
+    color: #de1b1b;
+    text-decoration: none;
+    outline: 0;
 }
 
+a:hover,
+a:focus,
+a:active {
+    color: #c91313;
+}
 /* Layout
 */
 
@@ -321,190 +349,227 @@ a {
 }
 
 .row > div {
-        width: 96%;
-        margin: 1em auto;
+    width: 96%;
+    margin: 1rem auto;
 }
 
 .nav, .header, .row {
-        background: #f7f8f2;
+    background: #f7f8f2;
 }
 
 .nav > div {
-        width: 96%;
-        margin: 0 auto;
+    width: 96%;
+    margin: 0 auto;
 }
 
 .nav li {
-        text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .nav > div > ul {
-        text-align: right;
+    text-align: right;
 }
 
 .nav li {
-        display: inline-block;
+    display: inline-block;
 }
 
 .nav li a {
-        display: block;
-        padding: .75rem .5rem;
+    display: block;
+    padding: .75rem .5rem;
 }
 
 .header > div {
-        width: 96%;
-        clear: both;
-        margin: 0 auto 1rem;
-        padding-bottom: 1rem;
-        border-bottom: 1px solid #b9bdc5;
+    width: 96%;
+    clear: both;
+    margin: 0 auto 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #b9bdc5;
 }
 
 .header a {
-        display: block;
-        overflow: hidden;
-        color: #2c373a;
-        padding: .5em 0;
+    display: block;
+    overflow: hidden;
+    color: #2c373a;
+    padding: .5rem 0;
 }
 
 .header a:hover {
-        color: #de1b1b;
+    color: #de1b1b;
 }
 
 .header h1 {
-        font-size: 4rem;
-        line-height: 1;
-        margin: 0;
+    font-size: 4rem;
+    line-height: 1;
+    margin: 0;
 }
 
-
 .header img {
-        max-width: 100%;
+    max-width: 100%;
 }
 
 .row .description {
-        font-size: 0.865rem;
-        padding-top: 2rem;
-}
-
-.description p,
-.main .readme p {
-        margin-bottom: .75rem;
+    font-size: 0.865rem;
+    padding-top: 2rem;
 }
 
 .row .main {
-        padding-top: 1rem;
+    padding-top: 1rem;
+}
+
+.description p,
+.main .readme p,
+.row .main p {
+    margin-bottom: .75rem;
+}
+
+.row .main-dataset .readme ul,
+.row .static-page ul  {
+    line-height: 1.4;
+    margin-bottom: 1rem;
+    margin-left: 0;
+}
+
+.row .main-dataset .readme ul li::before,
+.row .static-page .readme ul li::before {
+    content: '— ';
+    display: inline-block;
+    padding-right: 0.45rem;
+}
+
+.row .main-dataset ul li,
+.row .static-page ul li {
+    margin-bottom: 0.45rem;
 }
 
 .search {
-        padding: 0 0 1rem;
+    padding: 0 0 1rem;
+    position: relative;
 }
 
 #search {
-        display: block;
-        width: 95%;
-        border: 2px solid #de1b1b;
-        padding: 0.5rem 0rem 0.5rem 0.5rem;
-        border-radius: 4px;
+    box-sizing: border-box;
+    display: block;
+    font-size: 1rem;
+    font-family: 'Comme';
+    font-weight: 400;
+    width: 100%;
+    border: 2px solid #ccc;
+    padding: 0.5em 0 0.5em 0.5em;
+    border-radius: 4px;
+}
+
+    ::-webkit-input-placeholder { color: #969ba6; }
+    ::-moz-placeholder          { color: #969ba6; }
+    :-ms-input-placeholder      { color: #969ba6; }
+
+#search:focus {
+    color: #2c373a;
+    border: 2px solid #de1b1b;
 }
 
 #spinner {
-        display: inline;
-        visibility: hidden;
-        position: absolute;
-        top: 0.5rem;
-        right: 0.35rem;
-        z-index: 100;
+    display: inline;
+    visibility: hidden;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.35rem;
+    z-index: 100;
 }
 
 .notfound {
     display: none;
+    padding-top: 1em;
 }
 
 code {
-  font-family: monospace;
-  border-bottom: 1px solid #bbb;
+    font-family: monospace;
+    border-bottom: 1px solid #bbb;
 }
 
 /* homepage dataset list
 */
 
 .datasets > li {
-        border-bottom: 1px solid #b9bdc5;
-        padding-bottom: 1rem;
-        margin-top: 1rem;
-        margin-bottom: 0.45rem;
+    border-top: 1px solid #b9bdc5;
+    padding-bottom: 0.75rem;
+    margin-top: 0.45rem;
+    margin-bottom: 0.45rem;
 }
 
     .datasets > li:nth-child(2) {
-            margin-top: 0;
+        margin-top: 0;
     }
 
-.datasets h3 {
-        /*padding-top: .45rem;*/
+.datasets > li a {
+    display: block;
+    color: #2c373a;
 }
 
-.datasets h3 > span {
-        display: inline-block;
-        float: right;
+    .datasets > li a h3          { color: #de1b1b; }
+    .datasets > li a span        { color: #2c373a; }
+    .datasets > li a span.source { color: #969ba6; }
+
+
+.datasets > li a:hover h3,
+.datasets > li a:focus h3,
+.datasets > li a:active h3 { color: #c91313; }
+
+.datasets > li span {
+    display: block;
 }
 
-.datasets h3 > span a {
-        font-size: 0.5rem;
-        display: inline-block;
-        border: 2px solid #de1b1b;
-        padding: 0.5rem 1rem;
-        border-radius: 4px;
-}
-
-.datasets .source {
-        color: #969ba6;
-}
-
-
-.datasets .source a {
-        color: #969ba6;
-        border-bottom: 1px solid #969ba6;
+.datasets > li span.source {
+    display: block;
+    font-size: 0.875rem;
+    color: #969ba6;
 }
 
 /* dataset page
 */
 
+.main-dataset .details h4:first-child {
+    padding-top: 0;
+}
+
 .datafile-box {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 .datafile-fieldlist ul {
-  margin-left: 0.75rem;
-  font-size: 0.8rem;
+    margin-left: 0.75rem;
+    font-size: 0.8rem;
 }
 
 .sources ul {
-  margin-left: 0.75rem;
+    margin-left: 0.75rem;
 }
 
 .readme h1.title {
-  font-size: 1.75rem;
-  line-height: 1.3;
-  margin-bottom: 0.45rem;
+    font-size: 1.75rem;
+    line-height: 1.3;
+    margin-bottom: 0.45rem;
 }
 
 .readme h2.subtitle {
-  font-size: 0.9rem;
-  font-family: 'Comme Bold';
-  line-height: 1.3;
-  color: #999;
-  margin-bottom: 2rem;
+    font-size: 0.9rem;
+    font-family: 'Comme';
+    font-weight: 700;
+    line-height: 1.3;
+    color: #999;
+    margin-bottom: 2rem;
 }
 
 .readme h1 {
-  font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .readme h2 {
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  font-family: 'Comme Thin';
-  margin-top: 1rem;
+    font-size: 1.25rem;
+    font-family: 'Comme';
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-top: 1rem;
 }
 
 .footer {
@@ -516,14 +581,33 @@ code {
   margin-bottom: 1rem;
 }
 
-.footer li {
-  margin: 1rem 1rem 0 0;
+.footer h5 {
+    color: #2c373a;
+    margin-bottom: 1.75rem;
+    text-transform: none;
 }
 
-.footer div > ul img {
-  display: inline-block;
-  height: 50px;
-  width: auto;
+.footer h5 a {
+    display: inline-block;
+    margin: 0 0.75rem;
+    text-transform: uppercase;
+}
+
+.footer h5 img {
+    display: inline-block;
+    height: 18px;
+    width: auto;
+    vertical-align: bottom;
+}
+
+.footer li {
+    margin: 1rem 1rem 0 0;
+}
+
+.footer ul img {
+    display: inline-block;
+    height: 32px;
+    width: auto;
 }
 
 /* Forms -- contact form
@@ -534,8 +618,8 @@ form {
 }
 
 form p {
-  padding-top: 1rem;
-  margin-bottom: 1rem;
+    padding-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 form label {
@@ -556,7 +640,7 @@ input[type="email"] {
     display: block;
     background-color: #fefefe;
     border: 1px solid #cacaca;
-    border-radius: 3px;
+    border-radius: 4px;
     box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1) inset;
     box-sizing: border-box;
     color: #2c373a;
@@ -574,7 +658,7 @@ textarea {
   display: block;
   height: auto;
   min-height: 50px;
-  border-radius: 3px;
+  border-radius: 4px;
   overflow: auto;
   background-color: #fefefe;
   border: 1px solid #cacaca;
@@ -606,7 +690,7 @@ textarea:focus  {
     color: #2c373a;
     background-color: #cacaca;
     border: 1px solid transparent;
-    border-radius: 3px;
+    border-radius: 4px;
     cursor: pointer;
     padding: 0.75rem 1rem;
     text-align: center;
@@ -626,7 +710,7 @@ textarea:focus  {
 @media only screen and (min-width: 400px) {
 
         .datafiles > ul {
-                margin: 0 0 20px;
+                margin: 0 0 1.25rem;
         }
 
 }
@@ -665,7 +749,7 @@ textarea:focus  {
         }
 
         .datafiles > ul {
-                margin: 0 0  20px;
+                margin: 0 0 1.25rem;
         }
 
 }
