--- a/themes/centraldedados/static/css/main.css
+++ b/themes/centraldedados/static/css/main.css
@@ -190,9 +190,6 @@ textarea {
 /* Typography
 */
 
-/* Typography
-*/
-
 @font-face {
     font-family: 'Comme';
     font-weight: 400;
@@ -409,8 +406,12 @@ a:active {
 }
 
 .row .description {
-    font-size: 0.865rem;
     padding-top: 2rem;
+}
+
+.row .description p,
+.row .description code {
+    font-size: 0.875rem;
 }
 
 .row .main {
@@ -712,11 +713,6 @@ textarea:focus  {
         .datafiles > ul {
                 margin: 0 0 1.25rem;
         }
-
-}
-
-@media only screen and (min-width: 400px) and (max-width: 599px) {
-
 }
 
 
@@ -754,9 +750,6 @@ textarea:focus  {
 
 }
 
-@media only screen and (min-width: 600px) and (max-width: 899px) {
-
-}
 
 @media only screen and (min-width: 900px) {
 
@@ -796,7 +789,7 @@ textarea:focus  {
                 width: 86%;
                 overflow: auto;
                 clear: both;
-                margin: 0 auto;
+                margin: 1rem auto 0;
                 padding-bottom: 1.325rem;
         }
 
@@ -837,68 +830,5 @@ textarea:focus  {
                 padding: .5rem .25rem;
         }
 
-}
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
 }
 
