--- a/themes/centraldedados/templates/base.html
+++ b/themes/centraldedados/templates/base.html
@@ -25,8 +25,8 @@
     <header class="header">
       <div>
         <a href="/">
-          <p><img src="/img/centraldedados.png" alt="Datacentral" /></p>
-          <h1>Central de Dados</h1>
+          <p><img src="https://jugendhackt.org/wp-content/themes/jugend-hackt/library/images/logo.svg" alt="Datacentral" /></p>
+          <h1>Datacentral</h1>
         </a>
       </div>
     </header>
@@ -36,18 +36,14 @@
         <h5>Powered by
           <a rel="external" target="_blank" href="http://transparenciahackday.org" title="Transparência Hackday">
             <img src="/img/thackdaypt.png" alt="Transparência Hackday Portugal"> Transparência Hackday Portugal
-          </a> 
-          nos 
+          </a>
+          nos
           <a rel="external" target="_blank" href="http://datewithdata.pt" title="Date With Data">
             <img src="/img/datewithdata.png" alt="Date With Data">
           </a>
         </h5>
         <ul>
           <li>Supported by&nbsp;
-            <a rel="external" target="_blank" href="https://okfn.org/network/portugal/">
-              <img src="/img/okfn-pt.png" alt="Open Knowledge Portugal">
-              <strong>Open Knowledge Portugal</strong>
-            </a>
             <a rel="external" target="_blank" href="http://jplusplus.org">
               <img src="/img/jplusplus.png" alt="Journalism++">
               <strong>Journalism++</strong>
