--- a/themes/centraldedados/templates/base.html
+++ b/themes/centraldedados/templates/base.html
@@ -15,9 +15,9 @@
     <nav class="nav">
       <div>
         <ul>
-            <li><a href="/about/">About</a></li>
-            <li><a href="/faq/">FAQ</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a href="http://jugendhackt.ch">About</a></li>
+            <!--<li><a href="/faq/">FAQ</a></li>
+            <li><a href="/contact/">Contact</a></li>-->
           <li><a href="/api.json">API</a></li>
         </ul>
       </div>
