--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -10,13 +10,13 @@
 <section class="row">
   <div>
     <div class="main-dataset">
-    
+
       <div class="details">
-        <h4>Detalhes</h4>
-        <p><strong>Versão</strong> {{ datapkg.version }}</p>
-        <p><strong>Licença</strong> {{ datapkg.license }}</p>
-        <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
-        <p><a href="{{ datapkg.homepage }}">Ver no GitHub</a></p>
+        <h4>Details</h4>
+        <p><strong>Version</strong> {{ datapkg.version }}</p>
+        <p><strong>License</strong> {{ datapkg.license }}</p>
+        <p><strong>Updated</strong> {{ datapkg.last_updated }}</p>
+        <p><a href="{{ datapkg.homepage }}">&raquo; GitHub</a></p>
         <hr>
         <div class="downloads">
           <h4>Downloads</h4>
@@ -24,7 +24,7 @@
           <div class="datafile-box">
             <p><strong>{{ d.title|upper }}</strong> &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
             <div class="datafile-fieldlist">
-              <h5>Campos</h5>
+              <h5>Fields</h5>
               <ul>
                 {% for f in d.schema.fields %}
                 <li><strong>{{ f.name }}</strong> &ndash; {{ f.description }}</li>
@@ -36,7 +36,7 @@
         </div>
         <hr>
         <div class="sources">
-          <h4>Fontes</h4>
+          <h4>Sources</h4>
           <ul>
             {% for s in datapkg.sources %}
             <li><a href="{{ s.web }}">{{ s.name }}</a></li>
