--- a/themes/centraldedados/templates/contact.html
+++ b/themes/centraldedados/templates/contact.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-
 <section class="row">
-  <div>
-    <div class="main-dataset">
-      <div class="readme">
+ <div>
+    <div class="description">
+      {{ welcome_text }}
+    </div>
+    <div class="main">
+      <div class="static-page page-contact">
+
         <h2>Contact</h2>
         <form action="http://formspree.io/{{ contact_email }}" method="post">
           <label for="message">
@@ -20,6 +23,7 @@
           <input type="hidden" name="_subject" value="Datacentral contact!" />
           <input type="text" name="_gotcha" style="display:none" />
         </form>
+
       </div>
     </div>
   </div>
