Revert centraldedados theme

--- a/themes/centraldedados/templates/base.html
+++ b/themes/centraldedados/templates/base.html
@@ -20,8 +20,8 @@
       <div>
         <ul>
             <li><a href="/about/">About</a></li>
-            <!--<li><a href="/faq/">FAQ</a></li>
-            <li><a href="/contact/">Contact</a></li>-->
+            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/contact/">Contact</a></li>
           <li><a href="/api.json">API</a></li>
         </ul>
       </div>
