--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -10,28 +10,20 @@
 <section class="row">
   <div>
     <div class="main-dataset">
-
       <div class="details">
-        <h4>Details</h4>
-        <p><strong>Version</strong> {{ datapkg.version }}</p>
-        <p><strong>License</strong> {{ datapkg.license }}</p>
-        <p><strong>Updated</strong> {{ datapkg.last_updated }}</p>
-        <p><a href="{{ datapkg.homepage }}">&raquo; GitHub</a></p>
+        <h4>Detalhes</h4>
+        <p><strong>Versão</strong> {{ datapkg.version }}</p>
+        <p><strong>Licença</strong> {{ datapkg.license }}</p>
+        <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
+        <p><a href="{{ datapkg.homepage }}">Ver no GitHub</a></p>
         <hr>
         <div class="downloads">
           <h4>Downloads</h4>
           {% for d in datapkg.datafiles %}
           <div class="datafile-box">
-            <p><strong>{{ d.title|upper }}</strong> &ndash;
-              {% if d.basename.endswith('.csv') %}
-                <a href="/{{ d.basename }}" download>CSV</a> &bull;
-                <a href="/{{ d.basename.replace(".csv", ".json") }}" download>JSON</a>
-              {% else %}
-                <a href="/{{ d.basename }}" download>{{ d.basename }}</a> 
-              {% endif %}
-              </p>
+            <p><strong>{{ d.title|upper }}</strong> &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
             <div class="datafile-fieldlist">
-              <h5>Fields</h5>
+              <h5>Campos</h5>
               <ul>
                 {% for f in d.schema.fields %}
                 <li><strong>{{ f.name }}</strong> &ndash; {{ f.description }}</li>
@@ -43,7 +35,7 @@
         </div>
         <hr>
         <div class="sources">
-          <h4>Sources</h4>
+          <h4>Fontes</h4>
           <ul>
             {% for s in datapkg.sources %}
             <li><a href="{{ s.web }}">{{ s.name }}</a></li>
