Updated theme for hackdays

--- a/themes/schoolofdata/templates/base.html
+++ b/themes/schoolofdata/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/custom.css">
   </head>
   <body>
 
@@ -29,7 +30,7 @@
       <div>
         <h1>
           <a href="/" id="logo">
-            <img src="/img/scoda-horizontal-212x60-nontransparent.png" alt="School of Data">
+            <img src="/img/okfn-ch.jpg" alt="Open Knowledge CH logo">
           </a>
           <span id="sitename">Datacentral</span>
         </h1>
@@ -39,19 +40,16 @@
     <footer class="footer row">
       <div>
         <p>
-          <a rel="external" target="_blank" href="http://food.opendata.ch">
-            <img src="https://food.opendata.ch/wp-content/themes/food.opendata.ch/images/logo.png" alt="food.opendata.ch" style="height:100px">
-          </a>
-          <br><br>Supported by
+          Hosted and supported by
             <a rel="external" target="_blank" href="http://food.opendata.ch">
-              <strong>Open Food Hackdays</strong></a>
+              <strong>Opendata.ch</strong></a>
         </p>
         <ul>
           <li>
-            Powered by&nbsp;
+            Swiss Chapter of&nbsp;
             <a rel="external" target="_blank" href="https://okfn.org">
               <img src="/img/okfn.png" alt="OKI">
-              <strong>Open Knowledge International</strong>
+              <strong>Open Knowledge</strong>
             </a>
           </li>
         </ul>
