--- a/themes/schoolofdata/static/css/custom.css
+++ b/themes/schoolofdata/static/css/custom.css
@@ -13,3 +13,9 @@
 @media only screen and (max-width: 480px) {
 	.header h1 #logo img { display: none }
 }
+
+.last_updated {
+  font-size: 80%;
+  color: #555;
+  margin-top: 1em;
+}
