--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -15,7 +15,7 @@
         <p><strong>Versão</strong> {{ datapkg.version }}</p>
         <p><strong>Licença</strong> {{ datapkg.license }}</p>
         <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
-        <p><a href="{{ datapkg.homepage }}">Ver no GitHub</a></p>
+        <p><a href="{{ datapkg.homepage }}">Arquivo de origem</a></p>
         <hr>
         <div class="downloads">
           <h4>Downloads</h4>
