Don't show fields if dataset schema is empty

--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -22,6 +22,7 @@
           {% for d in datapkg.datafiles %}
           <div class="datafile-box">
             <p><strong>{{ d.title|upper }}</strong> &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
+            {% if d.schema.fields %}
             <div class="datafile-fieldlist">
               <h5>Campos</h5>
               <ul>
@@ -30,6 +31,7 @@
                 {% endfor %}
               </ul>
             </div>
+            {% endif %}
           </div>
           {% endfor %}
         </div>
